src/example_tbs/dma_axi/dma_axi64_core0/compile_result.txt
file: dma_axi64_core0.v
module: dma_axi64_core0
status: FAIL
slang_output:

Build failed: 8 errors, 0 warnings
import/dma_axi/src/dma_axi64/dma_axi64_core0.v:80:12: error: unknown macro or compiler directive '`LEN_BITS'
   output [`LEN_BITS-1:0]    AWLEN;
           ^~~~~~~~~
import/dma_axi/src/dma_axi64/dma_axi64_core0.v:81:12: error: unknown macro or compiler directive '`SIZE_BITS'
   output [`SIZE_BITS-1:0]                       AWSIZE;
           ^~~~~~~~~~
import/dma_axi/src/dma_axi64/dma_axi64_core0.v:93:12: error: unknown macro or compiler directive '`LEN_BITS'
   output [`LEN_BITS-1:0]    ARLEN;
           ^~~~~~~~~
import/dma_axi/src/dma_axi64/dma_axi64_core0.v:94:12: error: unknown macro or compiler directive '`SIZE_BITS'
   output [`SIZE_BITS-1:0]                       ARSIZE;
           ^~~~~~~~~~
import/dma_axi/src/dma_axi64/dma_axi64_core0.v:144:10: error: unknown macro or compiler directive '`TOKEN_BITS'
   wire [`TOKEN_BITS-1:0]    rd_tokens;
         ^~~~~~~~~~~
import/dma_axi/src/dma_axi64/dma_axi64_core0.v:146:10: error: unknown macro or compiler directive '`DELAY_BITS'
   wire [`DELAY_BITS-1:0]    rd_periph_delay;
         ^~~~~~~~~~~
import/dma_axi/src/dma_axi64/dma_axi64_core0.v:158:10: error: unknown macro or compiler directive '`TOKEN_BITS'
   wire [`TOKEN_BITS-1:0]    wr_tokens;
         ^~~~~~~~~~~
import/dma_axi/src/dma_axi64/dma_axi64_core0.v:160:10: error: unknown macro or compiler directive '`DELAY_BITS'
   wire [`DELAY_BITS-1:0]    wr_periph_delay;
         ^~~~~~~~~~~

